--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,19 @@
 @import url('bootstrap');
+
+.row {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.col {
+    border: 1px solid lightgray;
+    padding: 1rem;
+    border-radius: 15px;
+
+    form {
+
+        input:focus {
+            border: 0;
+        }
+    }
+}
